Fix vertical scroll issue on iPhone

--- a/src/_sass/responsive/_max-900.scss
+++ b/src/_sass/responsive/_max-900.scss
@@ -15,4 +15,6 @@
   bottom: 0;
 }
 
-
+.codeOfTheDay {
+  display: none;
+}
